# injectkit

./: .gitignore  .review_full_junit.xml  .review_junit.xml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  NICHE-STRATEGY.md  README.md  SECURITY.md  action.yml  entrypoint.sh  pyproject.toml
.github/scripts/: mock_endpoint.py
.github/workflows/: ci.yml  self-scan.yml
docs/: BASELINE.md  BENCHMARK.md  JUDGES.md  REPRODUCE.md  RESEARCH-USE.md  RESEARCH.md  TAXONOMY.md  index.html
injectkit/: __init__.py  __main__.py  benchmark.py  benchmark_runner.py  cli.py  cli_robustness.py  config.py  engine.py  indirect.py  models.py  web.py
injectkit/attackers/: __init__.py  adaptive.py  autodan.py  base.py  gcg.py  gptfuzzer.py  pair.py  registry.py  tap.py  whitebox_base.py
injectkit/attacks/: __init__.py  base.py  multiturn.py
injectkit/attacks/whitebox/: __init__.py  judge_loop.py  prefill.py
injectkit/bench/: __init__.py  capability.py  harness.py  leaderboard.py  stamp.py
injectkit/corpus/: __init__.py  data_exfiltration.yaml  direct_injection.yaml  indirect_injection.yaml  jailbreak.yaml  loader.py  system_prompt_leak.yaml  tool_abuse.yaml
injectkit/defenses/: __init__.py  base.py  mitigations.py  perplexity_filter.py  smoothllm.py
injectkit/evaluators/: __init__.py  base.py  heuristics.py  judge.py  response_class.py  scoring.py
injectkit/generate/: __init__.py  runner.py
injectkit/judge/: __init__.py  base.py  calibration.py  calibration_set.jsonl  canary.py  clean_cls.py  harmbench_cls.py  llama_guard.py  strongreject.py  substring.py
injectkit/reporters/: __init__.py  base.py  html.py  json.py  markdown.py  sarif.py  scorecard.py  terminal.py
injectkit/research/: __init__.py  base.py  datasets.py  registry.py
injectkit/targets/: __init__.py  anthropic_target.py  base.py  conversational.py  hf.py  http.py  mcp.py  ollama.py  openai_compat.py
injectkit/transforms/: __init__.py  base.py  ciphers.py  encoders.py  translate.py
injectkit/whitebox/: __init__.py  base.py  chat_templates.py  config.py  embedding.py  faster_gcg.py  gcg.py  gcg_hard.py  gcg_variants.py  igcg.py  mask_gcg.py  objective_judge.py  probe_sampling.py  registry.py  reinforce_gcg.py  targets.py  uja.py  zoo.py  zoo.yaml
tests/: conftest.py  test_action_assets.py  test_action_entrypoint.py  test_adaptive_attacker.py  test_anthropic_target.py  test_autodan_attacker.py  test_bench_capability.py  test_bench_harness.py  test_benchmark_runner.py  test_cli.py  test_cli_gui.py  test_cli_robustness.py  test_cli_v3_wiring.py  test_conversational.py  test_corpus.py  test_corpus_v2.py  test_defenses.py  test_docs_landing.py  test_docs_v3_readme_landing.py  test_docs_v3_research.py  test_engine.py  test_engine_crescendo_reply.py  test_engine_v2.py  test_errored_target.py  test_foundation.py  test_generate_runner.py  test_gptfuzz_attacker.py  test_heuristics.py  test_hf_target.py  test_http_target.py  test_indirect.py  test_judge.py  test_judge_layer.py  test_multiturn_crescendo_reply.py  test_multiturn_strategies.py  test_ollama_target.py  test_openai_compat_target.py  test_pair_attacker.py  test_perplexity_filter.py  test_reporters_sarif_html.py  (+26 more)
