[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "injectkit"
version = "0.3.0"
description = "Open-source red-team scanner for LLM prompt injection. Defensive, authorized-use only."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Dukotah / Copper Bay Labs" }]
keywords = [
    "prompt-injection",
    "llm-security",
    "red-team",
    "ai-security",
    "anthropic",
    "security-scanner",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

# Core deps: the CLI, corpus loader, HTTP target, heuristics, and reporters
# all work with just these. Heavy/optional SDKs are extras (lazy-imported).
dependencies = [
    "pyyaml>=6.0",
    "rich>=13.0",
    "pydantic>=2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
# Anthropic Messages API target + LLM judge.
anthropic = ["anthropic>=0.69"]
# MCP server / agent tool-use adapter.
mcp = ["mcp>=1.0"]
# HuggingFace Transformers in-process model target (loads + generates locally).
hf = ["transformers>=4.40", "torch>=2.0"]
# White-box model-zoo loader at 8/4-bit precision: accelerate handles device
# placement; bitsandbytes provides the int8/nf4 kernels (GPU-only). fp16 loads
# need only the `hf` extra. The zoo lazy-imports these only when a model loads.
zoo = ["transformers>=4.40", "torch>=2.0", "accelerate>=0.26", "bitsandbytes>=0.43"]
# Local Ollama server target + the local adaptive attacker backend (no API key).
ollama = ["requests>=2.28"]
# OpenAI-compatible local server target (vLLM / LM Studio / etc.; no API key).
openai = ["requests>=2.28"]
# Gated, opt-in research-dataset loaders (download official datasets on demand).
research = ["requests>=2.28"]
# Offline semantic-translation backend for the `translate` transform
# (low-resource-language bypass test). TranslateTransform lazy-imports
# argostranslate and raises a friendly error if absent; this extra ships the
# optional backend. NOT a core dep.
translate = ["argostranslate>=1.9"]
# Everything optional, for a full install.
all = [
    "anthropic>=0.69",
    "mcp>=1.0",
    "transformers>=4.40",
    "torch>=2.0",
    "accelerate>=0.26",
    "bitsandbytes>=0.43",
    "requests>=2.28",
    "argostranslate>=1.9",
]
# Test/dev tooling.
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://dukotah.github.io/injectkit/"
Repository = "https://github.com/Dukotah/injectkit"
Issues = "https://github.com/Dukotah/injectkit/issues"
Changelog = "https://github.com/Dukotah/injectkit/blob/main/CHANGELOG.md"
Security = "https://github.com/Dukotah/injectkit/blob/main/SECURITY.md"

[project.scripts]
injectkit = "injectkit.cli:main"

[tool.setuptools.packages.find]
include = ["injectkit*"]

# Ship the bundled YAML attack corpus + white-box model-zoo registry in the wheel.
[tool.setuptools.package-data]
injectkit = ["corpus/*.yaml", "whitebox/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
